--- a/zlog/build.gradle
+++ b/zlog/build.gradle
@@ -10,7 +10,8 @@ android {
     defaultConfig {
         minSdk 24
         targetSdk 36
-        
+        versionCode 200
+        versionName "2.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     
