--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,10 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.github.cl-6666:ZLog:v2.0.0'
     // ZLog dependency - using local project module
-    implementation project(':zlog')
+//    implementation project(':zlog')
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
