--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,9 @@ android {
 
 dependencies {
 
-    implementation 'com.github.cl-6666:ZLog:v2.0.0'
+//    implementation 'com.github.cl-6666:ZLog:v2.0.0'
     // ZLog dependency - using local project module
-//    implementation project(':zlog')
+    implementation project(':zlog')
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
