提交代码测试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
         <activity
             android:name=".CustomFormatterActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".ZLogWrapperDemoActivity"
+            android:exported="false" />
         
     </application>
 
